# rayhunter-merge

./: .gitignore  Cargo.toml  Dockerfile.arm-builder  Dockerfile.arm-builder-fixed  Dockerfile.nightly  GITHUB_READY_CHECKLIST.md  ISSUES_AND_TODOS.md  README.md  REPOSITORY_SETUP.md  SECURITY.md  browser_troubleshooting.md  build_and_deploy.sh  build_and_deploy_updated.sh  build_and_deploy_updated_fixed.sh  check_after_reboot.sh  check_daemon_status.sh  check_logs.sh  check_port_forwarding.sh  check_sse.sh  commit_message.txt  create_jwt_token.py  debug_alerts.html  debug_display_state_with_location.rs  debug_set_display_state_with_location.rs  debug_sse.html  debug_sse_minimal.html  debug_sse_minimal_fixed.html  debug_sse_minimal_with_map.html  debug_sse_minimal_with_map_fixed.html  debug_sse_minimal_with_map_fixed2.html  debug_sse_minimal_with_map_line.html  debug_sse_minimal_with_map_workaround.html  debug_sse_test.html  debug_test_alerts.html  deploy_binaries.sh  deploy_daemon.sh  deploy_daemon_chunked.sh  deploy_debug_alerts.sh  deploy_debug_html.sh  deploy_debug_map.sh  (+78 more)
daemon/: .gitignore  Cargo.toml  README_CELL_ATTACK_ALERTS.md  config.toml.example  test_attack_alert.sh  test_attack_alert_updated.sh
daemon/src/: auth.rs  config.rs  diag.rs  extract_and_validate_jwt.rs  gps.rs  gps_logger.rs  gps_lookup.rs  gps_v2.rs  main.rs  main.rs.bak2  notifications.rs  server.rs  server_fs.rs  test_alerts.rs
daemon/src/display/: tplink_onebit.rs
daemon/tools/: Cargo.toml  gps_jwt_pin.rs  install.sh
daemon/web/src/lib/: manifest.svelte.ts
daemon/web/src/lib/components/: AttackAlertSystem.svelte  ManifestCard.svelte  ManifestTableRow.svelte
daemon/web/src/routes/: +page.svelte
doc/: faq.md
installer/: Cargo.toml
installer/src/: main.rs
lib/: .gitignore  Cargo.toml
lib/src/: cellular_info.rs  lib.rs
lib/src/analysis/: cellular_network.rs  connection_redirect_downgrade.rs  incomplete_sib.rs  mod.rs  nas_null_cipher.rs  null_cipher.rs  priority_2g_downgrade.rs  test_analyzer.rs
telcom-parser/: Cargo.toml
tools/: secure_pin_manager.sh  set_time_from_modem.sh  setup_captive_portal.sh
