[package]
name = "rayhunter-daemon"
version = "0.6.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
rayhunter = { path = "../lib" }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", default-features = false, features = ["fs", "signal", "process", "rt"] }
axum = "0.8"
axum-extra = "0.8"
thiserror = "1.0"
libc = "0.2"
log = "0.4"
env_logger = { version = "0.11", default-features = false }
tokio-util = { version = "0.7", features = ["rt", "io", "compat"] }
futures-macro = "0.3"
include_dir = "0.7"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", default-features = false, features = ["io-util"] }
futures = { version = "0.3", default-features = false }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
tempfile = "3.10"
async_zip = { version = "0.0", features = ["tokio"] }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots-no-provider",
] }
rustls-rustcrypto = "0.0.2-alpha"
async-trait = "0.1"
pbkdf2 = "0.12"
hex = "0.4"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
lazy_static = "1.4"
jsonwebtoken = "9.2"
once_cell = "1.19"
