[package]
name = "rayhunter"
version = "0.6.1"
edition = "2024"
rust-version = "1.88.0"

[features]
default = []

[dependencies]
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
crc = "3.0.1"
deku = { version = "0.18.0", features = ["logging"] }
libc = "0.2.150"
log = "0.4.20"
nix = { version = "0.29.0", features = ["feature"] }
pcap-file-tokio = "0.1.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.44.2", default-features = false, features = ["time", "rt", "macros", "fs"] }
futures = { version = "0.3.30", default-features = false }
num_enum = "0.7.4"

# Dependencies for OpenCellID integration
csv = "1.3.0"
